<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/lib/ccpe001.familywallet"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
    >
        <EditText
                android:hint="@string/xmlsignup_emailTxt_hint"
                android:drawableStart="@mipmap/email"
                android:drawablePadding="15dp"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/emailTxt" android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            app:passwordToggleDrawable="@mipmap/xhdpi"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:passwordToggleEnable="true">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent">


        <EditText
                android:hint="@string/xmlsignup_passwordTxt_hint"
                android:drawableStart="@mipmap/password"
                android:drawablePadding="15dp"
                android:inputType="textPassword"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordTxt"
                android:maxLines="1"/>


        <TextView
                android:text="@string/xmlsignin_textView_text"
                android:clickable="true"
                android:textAlignment="textEnd"
                android:layout_alignBottom="@+id/passwordTxt"
                android:layout_alignBaseline="@+id/passwordTxt"
                android:layout_alignParentRight="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"/>

        </RelativeLayout>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:text="@string/xmlsignin_textView2_text"
            android:clickable="true"
            android:layout_marginTop="30dp"

            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2"/>

    <Button
            android:text="@string/xmlsignin_signInBtn_text"
            android:gravity="center_vertical"
            android:background="@drawable/roundbutton"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_height="47dp"
            android:id="@+id/signInBtn"/>
</LinearLayout>