<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/xmlforgot_textView3_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3" />

    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
    >
        <EditText
                android:hint="@string/xmlsignup_emailTxt_hint"
                android:drawableStart="@mipmap/email"
                android:drawablePadding="15dp"
                android:layout_marginLeft="10dp"
                android:inputType="textEmailAddress"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/emailTxtFor" android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>


    <Button
            android:text="@string/xmlforgot_sendMail_text"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundbutton"
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"


            android:layout_height="47dp"
            android:id="@+id/sendMail"/>

</LinearLayout>